--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Quick%20Right-Click"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Quick%20Right-Click"
 logoFile="icon.png"
 
 [[mods]]
 modId="quickrightclick"
-version="1.2"
+version="1.3"
 displayName="Quick Right-Click"
-displayURL="https://curseforge.com/minecraft/mc-mods/quick-right-click"
+displayURL="https://serilum.com/mod/quick-right-click"
 authors="Rick South"
 description='''Adds the functionality to right-click items in the air to access them quickly without placing them. Works for beds, cartography tables, crafting tables, ender chests, grindstones, shulker boxes, smithing tables and stonecutters.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.quickrightclick]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.3,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.quickrightclick]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.19.2]"
     ordering="NONE"
