--- a/gradle.properties
+++ b/gradle.properties
@@ -17,12 +17,12 @@ fabric_version=0.90.4+1.20.1
 fabric_loader_version=0.14.24
 
 # Mod options
-mod_name=quickright-click
+mod_name=quickrightclick
 mod_author=Serilum
-mod_id=quickright-click
+mod_id=quickrightclick
 
 # Gradle
 org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-collective_version=7.21
+collective_version=7.26
