(v1.4) Moved mixin files to the Common source folder to make future development easier.

--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="quickrightclick"
-version="1.3"
+version="1.4"
 displayName="Quick Right-Click"
 displayURL="https://serilum.com/mod/quick-right-click"
 authors="Rick South"
@@ -23,7 +23,7 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
     modId="collective"
     type="required"
     mandatory=true
-    versionRange="[7.21,)"
+    versionRange="[7.26,)"
     ordering="NONE"
     side="BOTH"
 
@@ -36,4 +36,4 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
     side="BOTH"
 
 [[mixins]]
-    config = "quickrightclick_neoforge.mixins.json"
+    config = "quickrightclick.mixins.json"
