--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="quickrightclick"
-version="1.4"
+version="1.5"
 displayName="Quick Right-Click"
 displayURL="https://serilum.com/mod/quick-right-click"
 authors="Rick South"
@@ -14,16 +14,16 @@ description='''Adds the functionality to right-click items in the air to access 
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Adam E, Alister, aternosorg, Cherriesaurus, FireStriker, Greg Johnson, Kreezxil, Michael W. S., Mir3JonCZ, Rebecca Hb., Shana Gitnick, silver Bowsman, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
-If you would like to contribute too, check out https://ricksouth.com/donate. Appreciate it! <3   
+If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
 
 [[dependencies.quickrightclick]]
     modId="collective"
     type="required"
     mandatory=true
-    versionRange="[7.26,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
