--- a/settings.gradle
+++ b/settings.gradle
@@ -37,4 +37,6 @@ pluginManagement {
 }
 
 rootProject.name = 'Quick-Right-Click-1,20,1'
-include("Common", "Fabric", "Forge")
+include("Common")
+include("Fabric")
+include("Forge")
