--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="quickrightclick"
-version="1.4"
+version="1.5"
 displayName="Quick Right-Click"
 displayURL="https://serilum.com/mod/quick-right-click"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Adds the functionality to right-click items in the air to access 
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Jack, Jeremy Langford, Michael W. S., pepe1191, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.quickrightclick]]
     modId="collective"
     mandatory=true
-    versionRange="[7.54,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
